--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
     height: 100%;
-    width: 700px;
+    width: 710px;
     margin: 0 auto;
 }
 
@@ -18,8 +18,8 @@
 
 .keyboard {
     box-sizing: border-box;
-    width: 700px;
-    height: 230px;
+    width: 100%;
+    height: 240px;
     margin: 0 auto;
     padding: 5px;
     border: grey solid 2px;
@@ -44,10 +44,12 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    box-shadow: 0px 4px 6px 1px rgba(154, 150, 150, 0.81);
 }
 
 .keyboard__button:hover {
    color: white;
+   box-shadow: inset -7px 7px 11px 3px rgba(154, 150, 150, 0.81);
 }
 
 #Backspace, #CapsLock {
@@ -76,6 +78,7 @@
 
 .pressed {
     color: rgb(204, 204, 204);
-    transition: opacity 0.8s ease-in-out;
     transform: scale(1.08);
+    transition: all 0.2s ease-in-out;
+    box-shadow: none;
 }
